--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,19 @@
 certifi==2020.11.8
 chardet==3.0.4
+codecov==2.1.10
+configobj==5.0.6
+coverage==5.3
+dpath==2.0.1
 geojson==2.5.0
 idna==2.10
+parse-it==3.4.0
+pyhcl==0.4.4
 pyowm==3.1.1
 PySocks==1.7.1
+python-dotenv==0.15.0
+PyYAML==5.3.1
 requests==2.25.0
+six==1.15.0
+toml==0.10.2
 urllib3==1.26.2
+xmltodict==0.12.0
