--- a/.drone.yml
+++ b/.drone.yml
@@ -18,6 +18,161 @@ steps:
     CODECOV_TOKEN:
       from_secret: codecov_token
 
+- name: docker_build_version
+  image: plugins/docker
+  when:
+    event:
+      - push
+    branch:
+      - master
+  settings:
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    repo: naorlivne/alert_on_rain_tomorrow
+    tags:
+      - linux-amd64
+      - linux-amd64-v${DRONE_BUILD_NUMBER}
+
+---
+kind: pipeline
+type: docker
+name: arm64_build
+
+platform:
+  os: linux
+  arch: arm64
+
+steps:
+- name: run_python_unit_test
+  image: python:3.9.0-alpine3.12
+  commands:
+  - pip install -r requirements.txt
+  - coverage run -m unittest
+  - codecov  --commit=$DRONE_COMMIT_SHA
+  environment:
+    TEST_FILES_LOCATION: test/test_files
+    CODECOV_TOKEN:
+      from_secret: codecov_token
+
+- name: docker_build_version
+  image: plugins/docker
+  when:
+    event:
+      - push
+    branch:
+      - master
+  settings:
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    repo: naorlivne/alert_on_rain_tomorrow
+    tags:
+      - linux-arm64
+      - linux-arm64-v${DRONE_BUILD_NUMBER}
+
+---
+kind: pipeline
+type: docker
+name: arm_build
+
+platform:
+  os: linux
+  arch: arm
+
+steps:
+- name: run_python_unit_test
+  image: python:3.9.0-alpine3.12
+  commands:
+  - pip install -r requirements.txt
+  - coverage run -m unittest
+  - codecov  --commit=$DRONE_COMMIT_SHA
+  environment:
+    TEST_FILES_LOCATION: test/test_files
+    CODECOV_TOKEN:
+      from_secret: codecov_token
+
+- name: docker_build_version
+  image: plugins/docker
+  when:
+    event:
+      - push
+    branch:
+      - master
+  settings:
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    repo: naorlivne/alert_on_rain_tomorrow
+    tags:
+      - linux-arm
+      - linux-arm-v${DRONE_BUILD_NUMBER}
+
+---
+kind: pipeline
+type: docker
+name: publish_docker_manifest
+
+trigger:
+  event:
+  - push
+  branch:
+  - master
+
+steps:
+- name: manifest
+  image: plugins/manifest
+  settings:
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    target:  naorlivne/alert_on_rain_tomorrow
+    template: naorlivne/alert_on_rain_tomorrow:OS-ARCH
+    platforms:
+      - linux/amd64
+      - linux/arm64
+      - linux/arm
+
+depends_on:
+- amd64_build
+- arm64_build
+- arm_build
+
+---
+kind: pipeline
+type: docker
+name: publish_docker_manifest_build_number
+
+trigger:
+  event:
+  - push
+  branch:
+  - master
+
+steps:
+- name: manifest
+  image: plugins/manifest
+  settings:
+    username:
+      from_secret: docker_username
+    password:
+      from_secret: docker_password
+    target:  naorlivne/alert_on_rain_tomorrow:v${DRONE_BUILD_NUMBER}
+    template: naorlivne/alert_on_rain_tomorrow:OS-ARCH-v${DRONE_BUILD_NUMBER}
+    platforms:
+      - linux/amd64
+      - linux/arm64
+      - linux/arm
+
+depends_on:
+- amd64_build
+- arm64_build
+- arm_build
+
 ---
 kind: pipeline
 type: docker
@@ -36,12 +191,11 @@ steps:
     github_user: ${DRONE_REPO_NAMESPACE}
     github_project: ${DRONE_REPO_NAME}
     output_path: CHANGELOG.md
-  environment:
-    CHANGELOG_GITHUB_TOKEN:
-      from_secret: changelog_github_token
 
 depends_on:
 - amd64_build
+- arm64_build
+- arm_build
 
 ---
 kind: pipeline
@@ -63,4 +217,6 @@ trigger:
   - failure
 
 depends_on:
-- amd64_build
+- publish_docker_manifest
+- publish_docker_manifest_build_number
+- publish_changelog
