--- a/.drone.yml
+++ b/.drone.yml
@@ -17,6 +17,8 @@ steps:
     TEST_FILES_LOCATION: test/test_files
     CODECOV_TOKEN:
       from_secret: codecov_token
+    OWN_API_KEY:
+      from_secret: OWN_API_KEY
 
 - name: docker_build_version
   image: plugins/docker
@@ -55,6 +57,8 @@ steps:
     TEST_FILES_LOCATION: test/test_files
     CODECOV_TOKEN:
       from_secret: codecov_token
+    OWN_API_KEY:
+      from_secret: OWN_API_KEY
 
 - name: docker_build_version
   image: plugins/docker
@@ -93,6 +97,8 @@ steps:
     TEST_FILES_LOCATION: test/test_files
     CODECOV_TOKEN:
       from_secret: codecov_token
+    OWN_API_KEY:
+      from_secret: OWN_API_KEY
 
 - name: docker_build_version
   image: plugins/docker
