--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
   commands:
   - pip install -r requirements.txt
   - coverage run -m unittest
-  - codecov  --commit=$DRONE_COMMIT_SHA
+  - codecov  --commit=$DRONE_COMMIT_SHA -v
   environment:
     TEST_FILES_LOCATION: test/test_files
     CODECOV_TOKEN:
