--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ certifi==2020.12.5
 chardet==4.0.0
 codecov==2.1.11
 configobj==5.0.6
-coverage==5.3
+coverage==5.3.1
 dpath==2.0.1
 geojson==2.5.0
 idna==2.10
@@ -14,6 +14,7 @@ pyTelegramBotAPI==3.7.4
 python-dotenv==0.15.0
 PyYAML==5.3.1
 requests==2.25.1
+requests-mock==1.8.0
 six==1.15.0
 toml==0.10.2
 urllib3==1.26.2
