--- a/.drone.yml
+++ b/.drone.yml
@@ -218,15 +218,57 @@ trigger:
   - master
 
 steps:
-- name: drone_heroku_deploy_container_web
+- name: drone_heroku_build_container_web
+  image: plugins/docker
+  when:
+    event:
+      - push
+    branch:
+      - master
+  settings:
+    username: naorlivne@gmail.com
+    email: naorlivne@gmail.com
+    password:
+      from_secret: heroku_api_key
+    registry: registry.heroku.com
+    repo: naorlivne/heroku_api_key
+    tags:
+      - registry.heroku.com/alert-on-rain-tomorrow/web
+- name: drone_heroku_release_container_web
   image: naorlivne/drone-heroku-deploy-container
+  when:
+    event:
+      - push
+    branch:
+      - master
   settings:
     heroku_api_key:
       from_secret: heroku_api_key
     heroku_process_type: web
     heroku_app_name: alert-on-rain-tomorrow
-- name: drone_heroku_deploy_container_worker
+- name: drone_heroku_build_container_worker
+  image: plugins/docker
+  when:
+    event:
+      - push
+    branch:
+      - master
+  settings:
+    username: naorlivne@gmail.com
+    email: naorlivne@gmail.com
+    password:
+      from_secret: heroku_api_key
+    registry: registry.heroku.com
+    repo: naorlivne/heroku_api_key
+    tags:
+      - registry.heroku.com/alert-on-rain-tomorrow/worker
+- name: drone_heroku_release_container_worker
   image: naorlivne/drone-heroku-deploy-container
+  when:
+    event:
+      - push
+    branch:
+      - master
   settings:
     heroku_api_key:
       from_secret: heroku_api_key
