adding fix to docker hub rate limit

--- a/.drone.yml
+++ b/.drone.yml
@@ -235,6 +235,8 @@ steps:
     branch:
       - master
   settings:
+    config:
+      from_secret: dockerconfig
     username: naorlivne@gmail.com
     password:
       from_secret: heroku_api_key
