--- a/.github/workflows/pr_testing_only.yml
+++ b/.github/workflows/pr_testing_only.yml
@@ -29,3 +29,5 @@ jobs:
       - name: Test
         run: |
           coverage run -m unittest
+        env:
+          OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
