--- a/.github/workflows/full_ci_cd_workflow.yml
+++ b/.github/workflows/full_ci_cd_workflow.yml
@@ -29,9 +29,13 @@ jobs:
       - name: Test
         run: |
           coverage run -m unittest
-          codecov  -t  ${{ secrets.CODECOV_TOKEN }}
         env:
           OWM_API_KEY: ${{ secrets.OWM_API_KEY }}
+      - name: Upload coverage to Codecov
+          uses: codecov/codecov-action@v3
+          with:
+            token: ${{ secrets.CODECOV_TOKEN }}
+            fail_ci_if_error: true
 
   build_and_publish_job:
 
